--- a/include/footer.html
+++ b/include/footer.html
@@ -1,7 +1,7 @@
 <section>
     <div class="container">
         <div class="row row-gap-4">
-            <div class="col-lg-2 col-md-6">
+            <div class="col-lg-2 col-6">
                 <h4>Home</h4>
                 <ul class="list-unstyled mb-0 footer-links">
                     <li><a href="#">Collection</a></li>
@@ -10,7 +10,7 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </div>
-            <div class="col-lg-2 col-md-6">
+            <div class="col-lg-2 col-6">
                 <h4>Information</h4>
                 <ul class="list-unstyled mb-0 footer-links">
                     <li><a href="#">Privacy policy</a></li>
@@ -18,12 +18,12 @@
                     <li><a href="#">Tearms of service</a></li>
                 </ul>
             </div>
-            <div class="col-lg-4 text-center align-self-center">
-                <a href="#" class="footer-logo">
+            <div class="col-lg-4 text-center align-self-center footer-logo">
+                <a href="#">
                     <img src="img/logo.png" alt="" />
                 </a>
             </div>
-            <div class="col-lg-2 col-md-6">
+            <div class="col-lg-2 col-6">
                 <h4>Explore</h4>
                 <ul class="list-unstyled mb-0 footer-links">
                     <li><a href="#">Our Story</a></li>
@@ -31,7 +31,7 @@
                     <li><a href="#">Care & Maintenance</a></li>
                 </ul>
             </div>
-            <div class="col-lg-2 col-md-6">
+            <div class="col-lg-2 col-6">
                 <h4>Contact</h4>
                 <ul class="list-unstyled mb-0 footer-links">
                     <li><a>Hinterbergstrasse 32,6330 Steinhausen, Switzerland</a></li>
@@ -40,9 +40,7 @@
                     <li><a>Monday - Friday : 9AM - 5PM Rest of time on appointment</a></li>
                 </ul>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-12">
+            <div class="col-12 footer-copyright">
                 <div class="d-flex flex-column gap-3">
                     <div class="d-flex justify-content-center gap-3">
                         <a href="#" target="_blank">
