--- a/css/responsive.css
+++ b/css/responsive.css
@@ -104,6 +104,49 @@
         width: 80px;
     }
 
+    .contact-sec {
+        padding-bottom: 0;
+    }
+
+    .contact-sec .d-line {
+        display: none;
+    }
+
+    .get-in-touch-wrapper,
+    .contact-wrapper {
+        margin: 0 !important;
+        padding: 30px 0;
+        position: relative;
+    }
+
+    .contact-wrapper p {
+        width: 100%;
+    }
+
+    .get-in-touch-wrapper p {
+        font-size: 18px;
+        line-height: 20px;
+    }
+
+    .contact-wrapper h3 {
+        margin-bottom: 10px;
+    }
+
+    .mob-line .col-md-6 .get-in-touch-wrapper::before,
+    .mob-line .col-md-6 .contact-wrapper::before {
+        position: absolute;
+        content: '';
+        bottom: 0;
+        left: -5%;
+        width: 120%;
+        height: 2px;
+        background-color: #080404;
+    }
+
+    .mob-line .col-md-6 .get-in-touch-wrapper:last-child::before {
+        display: none;
+    }
+
     .footer-logo {
         order: 1;
     }
