--- a/include/header.html
+++ b/include/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg">
     <div class="container">
-        <a class="navbar-brand d-lg-none" href="#">
+        <a class="navbar-brand d-lg-none" href="./index.html">
             <img src="./img/logo.png" alt="Logo" />
         </a>
         <button class="navbar-toggler border-0" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
@@ -11,7 +11,7 @@
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasExample"
             aria-labelledby="offcanvasExampleLabel">
             <div class="offcanvas-header">
-                <a class="navbar-brand d-lg-none" href="#">
+                <a class="navbar-brand d-lg-none" href="./index.html">
                     <img src="./img/logo.png" alt="Logo" />
                 </a>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -22,13 +22,13 @@
                         <a class="nav-link" href="#">Collections</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About Us</a>
+                        <a class="nav-link" href="./about-us.html">About Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Press</a>
                     </li>
                 </ul>
-                <a class="navbar-brand d-none d-lg-block" href="#">
+                <a class="navbar-brand d-none d-lg-block" href="./index.html">
                     <img src="./img/logo.png" alt="Logo" />
                 </a>
                 <ul class="navbar-nav me-auto">
