--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@ body {
     background-color: #EFEEE9;
 }
 
+.font-opt {
+    font-family: 'Opti-baker';
+}
+
 a {
     text-decoration: none;
 }
@@ -37,6 +41,12 @@ h2 {
     line-height: 50px;
     letter-spacing: 0em;
     color: #080404;
+}
+
+.error {
+    color: #f00;
+    font-weight: 500;
+    font-size: 14px;
 }
 
 section {
@@ -81,11 +91,34 @@ button:is(:focus, :active) {
     box-shadow: none !important;
 }
 
-#header {
+.breadcrumb-item a {
+    color: #08040480;
+}
+
+.breadcrumb-item.active {
+    color: #080404;
+    text-decoration: underline;
+}
+
+.home-page #header {
+    background-color: transparent;
     position: absolute;
     width: 100%;
     top: 0;
     z-index: 99;
+}
+
+.home-page #header .nav-link {
+    color: #fff;
+}
+
+.home-page .navbar-brand img {
+    filter: invert(0);
+}
+
+#header {
+    background-color: #EFEEE9;
+    padding-bottom: 1rem;
 }
 
 .navbar-brand {
@@ -93,6 +126,7 @@ button:is(:focus, :active) {
 }
 
 .navbar-brand img {
+    filter: invert(1);
     max-width: 176px;
 }
 
@@ -106,7 +140,7 @@ button:is(:focus, :active) {
 }
 
 #header .nav-link {
-    color: #FFF;
+    color: #08040480;
     font-family: 'Opti-baker';
     text-align: center;
     font-size: 20px;
@@ -116,6 +150,10 @@ button:is(:focus, :active) {
     padding-bottom: 0;
     margin: 0 30px;
     white-space: nowrap;
+}
+
+#header .nav-link:is(.active, :hover) {
+    color: #080404;
 }
 
 .navbar-toggler {
@@ -369,7 +407,7 @@ button:is(:focus, :active) {
     transform: translateX(50%) rotate(45deg);
 }
 
-.contact-wrapper:first-child {
+.contact-wrapper:not(:last-child) {
     margin-bottom: 72px;
 }
 
@@ -378,7 +416,7 @@ button:is(:focus, :active) {
     font-weight: 500;
     line-height: 40px;
     letter-spacing: 0em;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 .contact-wrapper p {
@@ -409,10 +447,13 @@ button:is(:focus, :active) {
 
 .about-bg {
     background-image: url(../img/about/about-banner.jpg);
+    min-height: calc(100vh - 130px);
 }
 
 .bg3 {
     background-image: url(../img/about/about2-bg.jpg);
+    background-size: cover;
+    background-position: center;
 }
 
 .bg3 .collection-bg {
@@ -458,6 +499,136 @@ button:is(:focus, :active) {
     inset: unset;
     top: 0;
     right: 47px;
+}
+
+.contact-form {
+    font-family: 'Opti-baker';
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 30px;
+    letter-spacing: 0.03em;
+}
+
+.form-label {
+    margin-bottom: 0;
+}
+
+.form-control {
+    border: 0;
+    border-bottom: 2px solid #000 !important;
+    border-radius: 0;
+    background: transparent;
+}
+
+.form-control:focus {
+    /* background-color: #D9D9D9; */
+    box-shadow: none;
+}
+
+
+.collection-section h1 {
+    font-size: 48px;
+    font-weight: 500;
+    line-height: 50px;
+    letter-spacing: 0em;
+}
+
+.collection-section p {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 30px;
+    letter-spacing: 0.03em;
+}
+
+.collect-tag a {
+    color: #080404;
+}
+
+.collect-tag h4 {
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 40px;
+    letter-spacing: 0em;
+}
+
+.collect-tag img {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+    object-position: center;
+}
+
+
+.product-img {
+    height: 600px;
+    overflow: hidden;
+    margin-bottom: 2rem;
+}
+
+.product-img img {
+    width: 100%;
+}
+
+.thumbnail-img {
+    display: flex;
+    gap: 2rem;
+}
+
+.thumbnail-img img {
+    width: 118px;
+    height: 118px;
+    opacity: .5;
+}
+
+.thumbnail-img a.active img {
+    opacity: 1;
+}
+
+.prod-desc h3 {
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 40px;
+    letter-spacing: 0em;
+    margin-bottom: 0;
+}
+
+.prod-desc p {
+    color: #080404B2;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 30px;
+    letter-spacing: 0.03em;
+}
+
+
+#pills-tab.nav-pills .nav-link {
+    border-radius: 0;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 25px;
+    letter-spacing: 0em;
+    color: #08040480;
+    padding: 0;
+    margin: 0 3rem;
+}
+
+#pills-tab.nav-pills .nav-link.active {
+    background-color: #0000;
+    color: #080404;
+    border-bottom: 2px solid;
+}
+
+#pills-tabContent img {
+    object-fit: cover;
+    object-position: center;
+}
+
+#pills-tabContent h4 {
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 40px;
+    letter-spacing: 0em;
+    color: #080404;
 }
 
 /* footer  */
