--- a/include/header.html
+++ b/include/header.html
@@ -19,7 +19,7 @@
             <div class="offcanvas-body align-items-end">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Collections</a>
+                        <a class="nav-link" href="./collection.html">Collections</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./about-us.html">About Us</a>
@@ -33,7 +33,7 @@
                 </a>
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="./contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Instagram</a>
