--- a/include/header.html
+++ b/include/header.html
@@ -3,13 +3,11 @@
         <a class="navbar-brand d-lg-none" href="./index.html">
             <img src="./img/logo.png" alt="Logo" />
         </a>
-        <button class="navbar-toggler border-0" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
-            aria-controls="offcanvasExample">
+        <button class="navbar-toggler border-0" type="button" id="open-nav">
             <span></span>
             <span></span>
         </button>
-        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasExample"
-            aria-labelledby="offcanvasExampleLabel">
+        <div class="offcanvas offcanvas-end" id="mob-nav">
             <div class="offcanvas-header">
                 <a class="navbar-brand d-lg-none" href="./index.html">
                     <img src="./img/logo.png" alt="Logo" />
@@ -69,3 +67,11 @@
         </div>
     </div>
 </nav>
+<script>
+    document.getElementById('open-nav').onclick = () => {
+        document.getElementById('mob-nav').classList.add('open')
+    }
+    document.querySelector('.btn-close').onclick = () => {
+        document.getElementById('mob-nav').classList.remove('open')
+    }
+</script>
