--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@ body {
     font-family: 'Opti-baker';
 }
 
+.font-outfit {
+    font-family: 'Outfit', sans-serif;
+}
+
 a {
     text-decoration: none;
 }
@@ -43,10 +47,20 @@ h2 {
     color: #080404;
 }
 
+.black {
+    color: #080404;
+}
+
 .error {
     color: #f00;
     font-weight: 500;
     font-size: 14px;
+}
+
+@media (min-width: 992px) {
+    .navbar-expand-lg .offcanvas .offcanvas-body {
+        margin-right: 8rem;
+    }
 }
 
 section {
@@ -118,7 +132,27 @@ button:is(:focus, :active) {
 
 #header {
     background-color: #EFEEE9;
+    width: 100%;
     padding-bottom: 1rem;
+    transition: all .4s;
+    top: -100px;
+}
+
+#header.fix {
+    background-color: #EFEEE9;
+    position: fixed;
+    z-index: 9999;
+    top: 0;
+    left: 0;
+    box-shadow: 0 1px 13px #0000001a;
+}
+
+#header.fix .navbar-brand img {
+    filter: invert(1);
+}
+
+#header.fix .nav-link {
+    color: #08040480;
 }
 
 .navbar-brand {
@@ -137,6 +171,8 @@ button:is(:focus, :active) {
 
 #footer .copyright {
     color: #080404;
+    font-size: 14px;
+    line-height: 15px;
 }
 
 #header .nav-link {
@@ -215,7 +251,7 @@ button:is(:focus, :active) {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    min-height: calc(100vh - 70px);
+    min-height: 760px;
 }
 
 .collection-text {
@@ -283,6 +319,10 @@ button:is(:focus, :active) {
     object-fit: cover;
     object-position: center;
 }
+
+/* .product-slider .slick-center {
+    width: 500px !important;
+} */
 
 .slick-dots {
     bottom: -40px;
@@ -386,9 +426,13 @@ button:is(:focus, :active) {
     height: 100%;
 }
 
+.brand-logos img {
+    width: 130px;
+}
+
 .contact-sec {
     position: relative;
-    border-bottom: 2px solid #080404;
+    /* border-bottom: 2px solid #080404; */
 }
 
 .contact-sec .d-line {
@@ -416,6 +460,7 @@ button:is(:focus, :active) {
 }
 
 .contact-wrapper h3 {
+    color: #080404;
     font-size: 32px;
     font-weight: 500;
     line-height: 40px;
@@ -424,7 +469,12 @@ button:is(:focus, :active) {
 }
 
 .contact-wrapper p {
+    color: #080404;
     margin-bottom: 0;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 30px;
+    letter-spacing: 0.03em;
 }
 
 .contact-wrapper p a {
@@ -483,9 +533,17 @@ button:is(:focus, :active) {
     letter-spacing: 0em;
 }
 
+/* .slide-card p span {
+    display: block;
+}
+
+.slide-card p span.open {
+    display: none;
+} */
+
 .slide-card a {
     font-family: 'Opti-baker';
-    text-decoration: underline;
+    text-decoration: underline !important;
     color: #080404;
     display: inline-block;
     margin: 7px 0 26px;
@@ -664,6 +722,8 @@ button:is(:focus, :active) {
 }
 
 #pills-tabContent img {
+    height: 399px;
+    width: 100%;
     object-fit: cover;
     object-position: center;
 }
@@ -676,7 +736,24 @@ button:is(:focus, :active) {
     color: #080404;
 }
 
+.press-sec p {
+    font-size: 20px;
+}
+
+.card.border-0 {
+    background-color: #EFEEE9;
+}
+
+.card.border-0 .card-body {
+    background-color: #EFEEE9;
+    padding-inline: 0;
+}
+
 /* footer  */
+#footer {
+    border-top: 2px solid #080404;
+}
+
 #footer h4 {
     font-size: 32px;
     font-weight: 500;
