--- a/include/header.html
+++ b/include/header.html
@@ -23,7 +23,7 @@
                         <a class="nav-link" href="./about-us.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Press</a>
+                        <a class="nav-link" href="./press.html">Press</a>
                     </li>
                 </ul>
                 <a class="navbar-brand d-none d-lg-block" href="./index.html">
