--- a/include/footer.html
+++ b/include/footer.html
@@ -4,10 +4,10 @@
             <div class="col-lg-2 col-6">
                 <h4>Home</h4>
                 <ul class="list-unstyled mb-0 footer-links">
-                    <li><a href="#">Collection</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Press</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="./collection.html">Collection</a></li>
+                    <li><a href="./about-us.html">About Us</a></li>
+                    <li><a href="./press.html">Press</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </div>
             <div class="col-lg-2 col-6">
@@ -19,7 +19,7 @@
                 </ul>
             </div>
             <div class="col-lg-4 text-center align-self-center footer-logo">
-                <a href="#">
+                <a href="./index.html">
                     <img src="img/logo.png" alt="" />
                 </a>
             </div>
