--- a/include/footer.html
+++ b/include/footer.html
@@ -13,9 +13,9 @@
             <div class="col-lg-2 col-6">
                 <h4>Information</h4>
                 <ul class="list-unstyled mb-0 footer-links">
-                    <li><a href="#">Privacy policy</a></li>
-                    <li><a href="#">Refund policy</a></li>
-                    <li><a href="#">Tearms of service</a></li>
+                    <li><a href="https://www.my-moroccan-rug.com/">Privacy policy</a></li>
+                    <li><a href="https://www.my-moroccan-rug.com/">Refund policy</a></li>
+                    <li><a href="https://www.my-moroccan-rug.com/">Tearms of service</a></li>
                 </ul>
             </div>
             <div class="col-lg-4 text-center align-self-center footer-logo">
@@ -26,9 +26,9 @@
             <div class="col-lg-2 col-6">
                 <h4>Explore</h4>
                 <ul class="list-unstyled mb-0 footer-links">
-                    <li><a href="#">Our Story</a></li>
-                    <li><a href="#">Wholesale</a></li>
-                    <li><a href="#">Care & Maintenance</a></li>
+                    <li><a href="https://www.my-moroccan-rug.com/">Our Story</a></li>
+                    <li><a href="https://www.my-moroccan-rug.com/">Wholesale</a></li>
+                    <li><a href="https://www.my-moroccan-rug.com/">Care & Maintenance</a></li>
                 </ul>
             </div>
             <div class="col-lg-2 col-6">
